# myphd-tracker

./: .gitignore  CLAUDE.md  log.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: index.md
progress/: index.md
research/: index.md
resources/: index.md
server/: app.py  models.py  prompts.py  resources.py  server.py  storage.py  tools.py
server/dashboard/: render.py  svg.py
server/dashboard/templates/: base.html  bibliography.html  index.html  progress.html  resource.html  topic.html
server/tests/: test_dashboard.py  test_models.py  test_server.py  test_storage.py
