[project]
name = "myphd-tracker"
version = "0.1.0"
description = "MCP server that replaces a lab journal, following the LLM Wiki pattern"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.31.2",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.2.0",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "python-frontmatter>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
