[project]
name = "myphd-tracker"
version = "0.1.0"
description = "MCP server that replaces a lab journal, following the LLM Wiki pattern"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.31.2",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.2.0",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[project.scripts]
myphd-tracker = "server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["server"]
typeCheckingMode = "basic"
